<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText=" "
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:id="@+id/etxFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dm_full_name"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/dm_gender"
            android:textSize="16sp"
            android:textColor="@color/colorOnBackground" />
        <TextView
            android:id="@+id/txtGenderError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_mb_selected"
            android:textColor="@color/colorError"
            android:textSize="16sp" />
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm_gender_male" />
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm_gender_female" />
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsernameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText=" "
        app:counterEnabled="true"
        app:counterMaxLength="25"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:id="@+id/etxUsernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dm_username"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPaswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText=" "
        app:counterEnabled="true"
        app:counterMaxLength="15"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:id="@+id/etxPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dm_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText=" "
        app:counterEnabled="true"
        app:counterMaxLength="15"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:id="@+id/etxConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dm_confirm_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText=" "
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:id="@+id/etxPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dm_phone_num"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chkAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dm_agree_to" />
    <TextView
        android:id="@+id/txtAgreementError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:text="@string/dm_err_chk"
        android:textSize="12sp"
        android:textColor="@color/colorError" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/dm_clear_all"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_register"
            style="@style/Widget.MaterialComponents.Button" />
    </LinearLayout>

</LinearLayout>